--- a/src/routes/Examples/components/Search/Search.scss
+++ b/src/routes/Examples/components/Search/Search.scss
@@ -3,8 +3,6 @@
   align-items: center;
   box-shadow: inset 0 -1px 0 $color-lighter-gray, inset 0 -2px 4px $color-lighter-gray;
   padding: 5px 10px;
-  position: sticky;
-  top: 0;
   background-color: white;
   z-index: 1;
 
